test/statsCases/parse-error/b.js
some
code
which
includes
a
parser )
error
in
some
line
